// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./config/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/config\` */
export function loadConfig(_) {}
export function readUserRc(_) {}
export function removeUserRc(_) {}
export function updateUserRc(_, _) {}
export function upsertUserRc(_, _) {}
export function writeUserRc(_, _) {}"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./config/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/config\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./path/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/path\` */
export { appdata }
export { homedir }
export { localAppdata }"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./path/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/path\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./fs/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/fs\` */
export { copyFile }
export { createSymlink }
export { ensureDirectory }
export { exists }
export { isDirectory }
export { isSymbolicLink }
export { remove }
export { removeSymlink }"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./fs/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/fs\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./highlight/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/highlight\` */
export { important }
export { info }
export { success }"
`;

exports[`exports-snapshot/starship-butler-utils starship-butler-utils/./highlight/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-utils/highlight\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-types starship-butler-types/./runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-types\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-types starship-butler-types/./dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-types\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler starship-butler/./runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler\` */
export { defineButlerConfig }
export { loadConfig }"
`;

exports[`exports-snapshot/starship-butler starship-butler/./dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/set/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/set\` */
export async function commandSet(_, _, _) {}
export function validateOptions(_) {}"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/set/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/set\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/preset/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/preset\` */
export async function commandPreset(_) {}
export async function filterActions(_) {}
export class HandlerError extends Error {
  constructor(_) {}
}
export function validateOptions(_) {}"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/preset/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/preset\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/utils/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/utils\` */
export { processConfig }
export { readUserRc }
export { upsertUserRc }"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./command/utils/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/command/utils\` */
/* no exports */"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./constants/runtime 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/constants\` */
export { ASSETS_FOLDER }
export { PKG_ROOT }"
`;

exports[`exports-snapshot/starship-butler-config-provider starship-butler-config-provider/./constants/dts 1`] = `
"/**
 * Generated by tsnapi — public API snapshot of \`starship-butler-config-provider/constants\` */
/* no exports */"
`;
